--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,8 @@
-Flask
+flask
 Werkzeug
 flask-cors
 pymongo
-dotenv
+python-dotenv
 pandas
 certifi
 numpy
@@ -10,4 +10,3 @@ scikit-learn
 osmnx
 networkx
 geopy
-bson
